--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Arnaud • Dev</title>
+  <title>Arnaud • Folio</title>
   <base href="/">
+  <meta name="description"
+        content="Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette vois de l'informatique et du développement.">
+  <meta name="keywords" content="Arnaud, Folio, Portfolio">
+  <meta name="author" content="Arnaud ALET">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/profil_icon.png">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
