--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Arnaud • Folio</title>
   <base href="/">
   <meta name="description"
-        content="Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette vois de l'informatique et du développement.">
+        content="Étudiant à l'Ensimag et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette vois de l'informatique et du développement.">
   <meta name="keywords" content="Arnaud, Folio, Portfolio">
   <meta name="author" content="Arnaud ALET">
   <meta name="viewport" content="width=device-width, initial-scale=1">
